<resources>
    <string name="app_name">TARC 2Day</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="top_event">Top Event</string>
    <string name="view_all">View All ></string>
    <string name="title_activity_event_list">EventList</string>
    <string name="title_activity_promotion_list">PromotionList</string>
    <string name="title_activity_event_info">EventInfo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_promotion_info">PromotionInfo</string>

    <string name="action_join">JOIN</string>
    <string name="title_activity_society_info">Society info</string>
    <string name="title_activity_society_list">society list</string>

    <string name="title_activity_promotion_create">PromotionCreate</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="google_api_key">AIzaSyCfJSBe-1rysq02j-CTKCd9l6BJlKdfcY4</string>
    <string name="change_password">Change Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="event_title">EVENT TITLE</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="starting_time">Starting Time</string>
    <string name="ending_time">Ending Time</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="society">Society</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="event_description">Event Description</string>
    <string name="promotion_title">PROMOTION TITLE</string>
    <string name="promotion_description">Promotion Description</string>
    <string name="society_name">SOCIETY NAME</string>
    <string name="person_in_charge">Person In Charge</string>
    <string name="society_description">Society Description</string>

    <string name="register_username">Username</string>
    <string name="register_password">Password</string>
    <string name="register_reenter_password">Reenter Password</string>
    <string name="register_name">Name</string>
    <string name="date_of_birth">Date of Birth</string>


</resources>
