<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_society"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rsf2.android.tarc2day.CreateSociety">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fileimage"
            android:id="@+id/createSocietyImageFile"
            android:clickable="true"
            android:onClick="onClickImageView"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/society_name"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            />
        <EditText
            android:id="@+id/editTextCreateSocietyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:drawableLeft="@drawable/ic_eventcalendar"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:hint="@string/society_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_in_charge"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextCreateSocietyPersonInCharge"
            android:maxLength="35"
            android:drawableLeft="@drawable/ic_username"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:hint="Person In Charge"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextCreateSocietyEmail"
            android:maxLength="35"
            android:hint="@string/email_address"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextCreateSocietyContactNo"
            android:maxLength="20"
            android:hint="Contact Number"
            android:drawableLeft="@drawable/ic_contact_phone"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/society_description"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextCreateSocietyDescription"
            android:hint="society description"
            android:maxLength="150"/>

        <Button
            android:text="Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCreateSociety"
            android:background="@drawable/rounddedbutton"
            android:backgroundTint="@color/tarPink"
            android:onClick="submitSociety" />

    </LinearLayout>
</ScrollView>
