<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/content_promotion_create"
            android:background="@color/transparentBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="rsf2.android.tarc2day.PromotionCreate">


    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fileimage"
            android:id="@+id/imageViewPromotionCreate"
            android:clickable="true"
            android:onClick="onClickImageView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotion_title"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"
            />

        <EditText
            android:id="@+id/editTextPromotionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:maxLines="1"
            android:hint="@string/promotion_title"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_eventcalendar"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_date"
                    android:textColor="@color/tarPink"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"/>

                <TextView
                    android:text="Starting Date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCreatePromoStartDate"
                    android:layout_gravity="left"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_eventcalendar"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/tarPink"
                    android:onClick="onClickDateTextView"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ending_date"
                    android:textColor="@color/tarPink"
                    android:layout_gravity="left"
                    />
                <TextView
                    android:text="Ending date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCreatePromoEndDate"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_eventcalendar"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/tarPink"
                    android:onClick="onClickDateTextView"
                    android:paddingTop="5dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/starting_time"
                    android:textColor="@color/tarPink"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    />
                <TextView
                    android:text="Starting Time"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCreatePromoStartTime"
                    android:layout_gravity="left"
                    android:gravity="left"
                    android:clickable="true"
                    android:onClick="onClickTimeTextView"
                    android:drawableLeft="@drawable/ic_timer"
                    android:drawablePadding="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ending_time"
                    android:textColor="@color/tarPink"
                    android:layout_gravity="left"
                    />
                <TextView
                    android:text="Ending Time"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewCreatePromoEndTime"
                    android:clickable="true"
                    android:onClick="onClickTimeTextView"
                    android:drawableLeft="@drawable/ic_timer"
                    android:drawablePadding="10dp"
                    android:paddingTop="5dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextCreatePromoEmail"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:maxLength="35"
            android:hint="Email address"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editTextCreatePromoContact"
            android:drawableLeft="@drawable/ic_contact_phone"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:maxLength="20"
            android:hint="Contact Number"
            android:layout_marginBottom="15dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:hint="@string/location"
            android:maxLength="20"
            android:id="@+id/editTextCreatePromoLocation"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:drawableLeft="@drawable/ic_money"
            android:drawablePadding="10dp"
            android:drawableTint="@color/tarPink"
            android:hint="@string/price"
            android:maxLength="20"
            android:id="@+id/editTextCreatePromoPrice"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotion_description"
            android:textColor="@color/tarPink"
            android:layout_gravity="left"
            android:paddingLeft="5dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editTextCreatePromoDetail"
            android:hint="@string/promotion_description"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:maxLength="150"
            android:layout_marginBottom="15dp"/>

        <Button
            android:text="Submit"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCreatePromo"
            android:background="@drawable/rounddedbutton"
            android:backgroundTint="@color/tarPink"
            android:onClick="submitPromotion"
            />

    </LinearLayout>
</ScrollView>
